# CS-Uni-projects

./: README.md
mail_app/src/: CMakeLists.txt  Dockerfile  Dockerfile.tests  entrypoint.sh
mail_app/src/MVC/: Dockerfile  app.js  blacklistClient.js  package-lock.json  package.json
mail_app/src/MVC/config/: .env.local  .env.test
mail_app/src/MVC/controllers/: blacklist.js  labels.js  mails.js  users.js
mail_app/src/MVC/middleware/: multer.js
mail_app/src/MVC/models/: blacklist.js  labels.js  mails.js  users.js
mail_app/src/MVC/routes/: blacklist.js  labels.js  mails.js  tokens.js  users.js
mail_app/src/MVC/services/: labels.js  mails.js  users.js
mail_app/src/android/AndroidGmail/: build.gradle.kts  config.properties  settings.gradle.kts
mail_app/src/android/AndroidGmail/app/: build.gradle.kts
mail_app/src/android/AndroidGmail/gradle/: libs.versions.toml
mail_app/src/cpp/: AddURLToBlacklist.cpp  App.cpp  Blacklist.cpp  Bloomfilter.cpp  CheckURLInBlacklist.cpp  Database.cpp  DeleteURL.cpp  Menu.cpp  server.cpp
mail_app/src/header/: AddURLToBlacklist.h  App.h  Blacklist.h  Bloomfilter.h  CheckURLInBlacklist.h  Database.h  DeleteURL.h  ICommand.h  Idata.h  Menu.h
mail_app/src/my-react-app/: Dockerfile.react  package-lock.json
mail_app/src/my-react-app/public/: index.css  index.html  manifest.json
mail_app/src/my-react-app/src/: App.css  App.js
mail_app/src/py/: Dockerfile  client.py
mail_app/src/tests/: addURLtests.cpp  appTests.cpp  checkURLTest.cpp  deleteURLTest.cpp  menuTest.cpp  presistenceTest.cpp  saveToFileTest.cpp
(+192 files in other folders)
